remove Facebook SDK and github buttons

--- a/index.html
+++ b/index.html
@@ -164,23 +164,7 @@ h1, h2, h3, h4, h5, h6 {
 
 </head>
 <body>
-	<!-- begin Facebook SDK -->
-	<div id="fb-root"></div>
-	<script>(function(d, s, id) {
-	  var js, fjs = d.getElementsByTagName(s)[0];
-	  if (d.getElementById(id)) return;
-	  js = d.createElement(s); js.id = id;
-	  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&appId=385205984962960&version=v2.0";
-	  fjs.parentNode.insertBefore(js, fjs);
-	}(document, 'script', 'facebook-jssdk'));</script>
-	<!-- end Facebook SDK -->
-
-
-	<div id='controls' data-strip-on-export>
-		<button onClick="exportHTML('github')">Export to Github</button>
-		<button onClick="exportHTML('url')">Get shareable URL</button>
-	</div>
-<div id='content' contentEditable>
+<div id='content'>
 
 
 <div id='chevron' class='fa fa-chevron-down'></div>
